Update AppoinmentList class & html

--- a/booking/templates/booking/appointment_list.html
+++ b/booking/templates/booking/appointment_list.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Views Part 1</title>
+    <title>Booking</title>
 </head>
 
 <body>
-    <h1>Posts list</h1>
+    <h1>Appointment List</h1>
     {% for appointment in object_list %}
-    <h2>{{post.title}}</h2>
-    <p>{{post.excerpt}}</p>
-    <p>Author: {{post.author}}</p>
+    <h2>{{appointment.first_name}}</h2>
+    <p>Time of lesson: {{appointment.date_and_time}}</p>
+    <p>Meeting point: {{appointment.meeting_point}}</p>
+    <p>Created on: {{appointment.created_on}}</p>
     {% endfor %}
 </body>
 
