--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,10 @@
-{% url 'booking-urls' as home_url %}
+{% url 'home' as home_url %}
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
 
 <head>
-    <title>Booking</title>
+    <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Google Fonts CSS -->
