--- a/booking/templates/booking/booking.html
+++ b/booking/templates/booking/booking.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<!-- booking.html content starts here -->
+<!-- index.html content starts here -->
 <div class="container-fluid">
     <div class="row">
 
