Add html content to index page

--- a/booking/templates/booking/index.html
+++ b/booking/templates/booking/index.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-    <h1>Im the home page</h1>
-    
-</body>
-</html>
+{% block content %}
+
+{% endblock %}
+{% block copyright %}
+    Copyright 2024 William Stocks
+{% endblock %}
