Add buttons to booking.html & update href

--- a/booking/templates/booking/index.html
+++ b/booking/templates/booking/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% url 'home' as booking_urls %}
 
 {% block content %}
-
+<h1>I AM THE HOME PAGE</h1>
 {% endblock %}
 {% block copyright %}
     Copyright 2024 William Stocks
