--- a/booking/templates/booking/booking.html
+++ b/booking/templates/booking/booking.html
@@ -18,7 +18,7 @@
                                     <p class="client">Client name: {{ appointment.first_name }} {{ appointment.surname }}</p>
                                 </div>
                             </div>
-                            <a href="#" class="post-link">
+                            <a href="#" class="appointment-link">
                                 <h2 class="card-date">{{ appointment.date_and_time }}</h2>
                             </a>
 
@@ -43,6 +43,9 @@
     {% if is_paginated %}
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link"> &laquo; PREV</a></li>
+            {% endif %}
             {% if page_obj.has_next %}
             <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
             {% endif %}
