--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
-{% url 'booking' as booking_url %}
+{% url 'booking-urls' as booking-urls %}
+{% url 'home' as booking-urls %}
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
@@ -29,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'booking-urls' %}"><span class="brand">S<span class="red-o">k</span>i<span
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">S<span class="red-o">k</span>i<span
                         class="thin">|School</span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,8 +39,8 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
-                            href="#">Booking</a>
+                        <a class="nav-link {% if request.path == booking_url %}active{% endif %}" aria-current="page"
+                            href="{% url 'booking-urls' %}">Booking</a>
                     </li>
 
                 </ul>
