--- a/booking/templates/booking/index.html
+++ b/booking/templates/booking/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% url 'home' as booking_urls %}
+{% url 'home' as booking-urls %}
 
 {% block content %}
 <h1>I AM THE HOME PAGE</h1>
