--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -101,12 +101,12 @@ body {
     color: #E84610;
 }
 
-.post-title {
+.post-appointment {
     margin-top: 10%;
     margin-left: 5%;
 }
 
-.post-subtitle {
+.appointment-subtitle {
     margin-left: 5%;
     color: lightgray;
 }
