--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
-{% url 'booking-urls' as booking-urls %}
 {% url 'home' as booking-urls %}
+{% url 'booking-urls' as booking-urls %}
+
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
@@ -75,7 +76,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-        </script>
+    </script>
+    <script src="{% static 'js/script.js' %}"></script>
+
 </body>
 
 </html>
