--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% url 'home' as booking-urls %}
 {% url 'booking-urls' as booking-urls %}
+{% url 'profile' as instructor-urls %}
 
 
 <!DOCTYPE html>
@@ -43,6 +44,11 @@
                         <a class="nav-link {% if request.path == booking_url %}active{% endif %}" aria-current="page"
                             href="{% url 'booking-urls' %}">Booking</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == about_url %}active{%endif%}" aria-current="page"
+                            href="{% url 'instructors-urls' %}">Instructor Profile</a
+                        >
+                      </li>
 
                 </ul>
                 <span class="navbar-text text-muted">
