--- a/templates/base.html
+++ b/templates/base.html
@@ -42,11 +42,11 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == booking_url %}active{% endif %}" aria-current="page"
-                            href="{% url 'booking-urls' %}">Booking</a>
+                            href="{% url 'home' %}">Booking</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == about_url %}active{%endif%}" aria-current="page"
-                            href="{% url 'instructors-urls' %}">Instructor Profile</a
+                            href="{#}">Instructor Profile</a
                         >
                       </li>
 
