--- a/booking/templates/login.html
+++ b/booking/templates/login.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
     <label for="username">Username:</label>
@@ -6,3 +9,4 @@
     <input type="password" id="password" name="password">
     <button type="submit">Login</button>
 </form>
+{% endblock %}
