--- a/booking/templates/signup.html
+++ b/booking/templates/signup.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <form method="post" action="{% url 'signup' %}">
     {% csrf_token %}
     <label for="username">Username:</label>
@@ -8,3 +11,4 @@
     <input type="password" id="password2" name="password2">
     <button type="submit">Sign Up</button>
 </form>
+{% endblock %}
