--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,16 @@
 {% url 'home' as booking-urls %}
 {% url 'booking-urls' as booking-urls %}
 {% url 'profile' as instructor-urls %}
+{% url 'login' as login_url %}
+{% url 'signup' as signup_url %}
+{% url 'logout' as logout_url %}
 
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
 
 <head>
-    <title>Booking</title>
+    <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Google Fonts CSS -->
@@ -46,9 +49,21 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == about_url %}active{%endif%}" aria-current="page"
-                            href="{#}">Instructor Profile</a
-                        >
-                      </li>
+                            href="{#}">Instructor Profile</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
+                            href="{% url 'account_signup' %}">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page" href="{% url 'account_login' %}">Login</a>
+                    </li>
+                    {% endif %}
 
                 </ul>
                 <span class="navbar-text text-muted">
@@ -70,7 +85,7 @@
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">
             {% block copyright %}
-                Made by William Stocks
+            Copyright 2024 William Stocks
             {% endblock copyright %}
         </p>
         <p class="m-0 text-center text-white">Follow us on: <i class="fab fa-facebook-square ms-3"></i>
