--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,9 @@
 {% load static %}
-{% url 'home' as booking-urls %}
-{% url 'booking-urls' as booking-urls %}
-{% url 'profile' as instructor-urls %}
+{% url 'home' as booking_urls %}
+{% url 'profile' as instructor_urls %}
 {% url 'login' as login_url %}
 {% url 'signup' as signup_url %}
 {% url 'logout' as logout_url %}
-
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
@@ -35,8 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">S<span class="red-o">k</span>i<span
-                        class="thin">|School</span></span></a>
+            <a class="navbar-brand" href="{% url 'home' %}">Ski|School</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,16 +41,16 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == booking_url %}active{% endif %}" aria-current="page"
+                        <a class="nav-link {% if request.path == booking_urls %}active{% endif %}" aria-current="page"
                             href="{% url 'home' %}">Booking</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == about_url %}active{%endif%}" aria-current="page"
-                            href="{#}">Instructor Profile</a>
+                        <a class="nav-link {% if request.path == instructor_urls %}active{%endif%}" aria-current="page"
+                            href="#">Instructor Profile</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
+                        <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
@@ -64,10 +61,9 @@
                         <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page" href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
-
                 </ul>
                 <span class="navbar-text text-muted">
-                    lets book a lesson or two
+                    Let's book a lesson or two
                 </span>
             </div>
         </div>
